HBASE-2 hlog numbers should wrap around when they reach 999
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@619657 13f79535-47bb-0310-9956-ffa450edef68